--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
       "react/no-string-refs": [0],
       "react/jsx-filename-extension": [0],
       "import/prefer-default-export": [0],
+      "import/no-named-as-default": [0],
       "react/no-find-dom-node": [0]
   },
   "settings": {
