--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dist": "cross-env NODE_ENV=production electron-packager . nteract --prune --out dist",
     "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
     "dist:linux32": "npm run dist -- --platform=linux --arch=ia32",
-    "dist:osx": "npm run dist -- --platform=darwin --arch=x64 --icon ./static/icon.icns --extend-info=./static/extend.plist --app-category-type=public.app-category.developer-tools --app-bundle-id=io.nteract.nteract --osx-sign"
+    "dist:osx": "npm run dist -- --platform=darwin --arch=x64 --icon ./static/icon.icns --extend-info=./static/extend.plist --app-category-type=public.app-category.developer-tools --app-bundle-id=io.nteract.nteract",
+    "dist:osx:signed": "npm run dist:osx -- --osx-sign"
   },
   "repository": {
     "type": "git",
@@ -58,6 +59,7 @@
     "commonmark-react-renderer": "^4.3.1",
     "commutable": "^1.2.0",
     "electron-json-storage": "^2.0.0",
+    "electron-log": "^1.0.19",
     "enchannel": "^1.1.3",
     "enchannel-zmq-backend": "^2.1.1",
     "github": "^2.5.2",
