--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "react-jupyter-display-area": "^1.2.3",
     "react-notification-system": "^0.2.9",
     "react-redux": "^4.4.5",
+    "react-simple-dropdown": "^1.1.4",
+    "react-simple-menu": "^1.0.0",
     "redux": "^3.5.2",
     "redux-actions": "^0.11.0",
     "redux-logger": "^2.6.1",
