--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "eslint-plugin-react": "^6.0.0",
     "jsdom": "^9.4.2",
     "mocha": "^3.0.2",
+    "mock-require": "^1.3.0",
     "nyc": "^8.0.0",
     "react-addons-test-utils": "^15.3.1",
     "rimraf": "^2.5.2",
