--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "home-dir": "^1.0.0",
     "immutable": "^3.7.6",
     "kernelspecs": "^1.0.1",
+    "leaflet": "^0.7.7",
     "mathjax-electron": "^1.1.0",
     "normalize.css": "^4.2.0",
     "nteract-assets": "^2.0.0",
