--- a/.eslintrc
+++ b/.eslintrc
@@ -10,11 +10,12 @@
       "camelcase": [0],
       "no-console": [2, { allow: ["warn", "error"] }],
       "no-underscore-dangle": [0],
-      "react/no-string-refs": [0],
-      "react/jsx-filename-extension": [0],
-      "import/prefer-default-export": [0],
-      "import/no-named-as-default": [0],
-      "react/no-find-dom-node": [0]
+       "react/no-string-refs": [0],
+       "react/jsx-filename-extension": [0],
+       "import/prefer-default-export": [0],
+       "import/no-named-as-default": [0],
+       "react/forbid-prop-types": [0],
+       "react/no-find-dom-node": [0]
   },
   "settings": {
       "import/core-modules": ["electron"]
