--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
        "import/prefer-default-export": [0],
        "import/no-named-as-default": [0],
        "react/forbid-prop-types": [0],
-       "react/no-find-dom-node": [0]
+       "react/no-find-dom-node": [0],
+       "jsx-a11y/no-static-element-interactions": [0]
   },
   "settings": {
       "import/core-modules": ["electron"]
