Cut down on layers of indirection
This was leftover from when we were using electron-rebuild.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nteract",
   "version": "0.0.7",
   "description": ":notebook: the nteract notebook",
-  "main": "index.js",
+  "main": "build/main.js",
   "scripts": {
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=development electron .",
