--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/main.js",
   "scripts": {
     "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=development electron .",
+    "start": "cross-env NODE_ENV=development electron build/main/index.js",
     "prepublish": "npm run build",
     "clean": "rimraf build dist",
     "lint": "eslint src",
