--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nteract",
   "version": "0.0.7",
   "description": ":notebook: the nteract notebook",
-  "main": "build/main.js",
+  "main": "index.js",
   "scripts": {
     "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=development electron build/main/index.js",
+    "start": "cross-env NODE_ENV=development electron .",
     "prepublish": "npm run build",
     "clean": "rimraf build dist",
     "lint": "eslint src",
