--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.4.1",
+    "chai-immutable": "^1.6.0",
     "cross-env": "^2.0.0",
     "electron-mocha": "^3.0.6",
     "electron-osx-sign": "^0.3.1",
