--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
        "import/no-named-as-default": [0],
        "react/forbid-prop-types": [0],
        "react/no-find-dom-node": [0],
-       "jsx-a11y/no-static-element-interactions": [0]
+       "jsx-a11y/no-static-element-interactions": [0],
+       "arrow-parens": [0]
   },
   "settings": {
       "import/core-modules": ["electron"]
