--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-react": "^6.0.0",
     "jsdom": "^9.4.2",
+    "jsx-chai": "^4.0.0",
     "mocha": "^3.0.2",
     "mock-require": "^1.3.0",
     "nyc": "^8.0.0",
