--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
        "react/require-extension": "off",
        "react/jsx-filename-extension": "off",
        "import/extensions": [0, { "js": "never", "jsx": "never"}],
-       "max-len": [100]
+       "max-len": [2, 100]
   },
   "settings": {
       "import/core-modules": ["electron"]
