--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": "airbnb",
+  "extends": "airbnb/legacy",
   "env": {
     "browser": true,
     "node": true,
@@ -18,9 +18,19 @@
        "jsx-a11y/no-static-element-interactions": [0],
        "arrow-parens": [0],
        "react/require-extension": "off",
+       "comma-dangle": [0],
+       "no-unused-var": [0],
        "react/jsx-filename-extension": "off",
        "import/extensions": [0, { "js": "never", "jsx": "never"}],
-       "max-len": [2, 100]
+       "max-len": [
+            2,
+            100, {
+                "ignoreComments": true,
+                "ignoreTrailingComments": true,
+                "ignoreUrls": true,
+                "ignoreTemplateLiterals": true
+            }
+        ]
   },
   "settings": {
       "import/core-modules": ["electron"]
