--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "kernelspecs": "^1.0.1",
     "leaflet": "^0.7.7",
     "mathjax-electron": "^1.1.1",
+    "moment": "^2.15.0",
     "normalize.css": "^4.2.0",
     "nteract-assets": "^2.0.0",
     "plotly.js": "^1.17.0",
