--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "redux-logger": "^2.6.1",
     "redux-observable": "^0.12.0",
     "rxjs": "^5.0.0-beta.12",
+    "shell-env": "^0.2.0",
     "spawnteract": "^2.2.0",
     "transformime-react": "^1.1.0",
     "uuid": "^2.0.3",
