--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prebuild": "rimraf build",
     "build": "babel src --out-dir build",
     "build:icon": "./scripts/make_icons.sh && cd static/icons && iconutil -c icns nteract.iconset && mv nteract.icns ../icon.icns",
+    "build:docs": "esdoc -c esdoc.json",
     "build:watch": "npm run build -- --watch",
     "test": "npm run test:unit",
     "pretest:functional": "npm run build",
@@ -114,6 +115,7 @@
     "electron-prebuilt": "1.1.3",
     "electron-react-devtools": "^0.4.0",
     "enzyme": "^2.2.0",
+    "esdoc": "^0.4.8",
     "eslint": "^3.6.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
