--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test": "npm run test:unit",
     "pretest:functional": "npm run build",
     "sublaunch": "electron-mocha --compilers js:babel-core/register",
-    "test:functional:launch": "npm run sublaunch -- 'test/main/launch.js'",
-    "test:functional:launchNewNotebook": "npm run sublaunch -- 'test/main/launchNewNotebook.js'",
+    "test:functional:launch": "npm run sublaunch -- test/main/launch.js",
+    "test:functional:launchNewNotebook": "npm run sublaunch -- test/main/launchNewNotebook.js",
     "test:functional": "npm run test:functional:launch && npm run test:functional:launchNewNotebook",
     "test:coverage": "npm run coverage",
     "test:unit": "mocha -r test/setup.js --compilers js:babel-core/register 'test/renderer/**/*.js'",
