--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,8 @@
        "import/prefer-default-export": [0],
        "import/no-named-as-default": [0],
        "react/forbid-prop-types": [0],
+       "import/no-duplicates": [1],
+       "no-duplicate-imports": [0],
        "react/no-find-dom-node": [0],
        "jsx-a11y/no-static-element-interactions": [0],
        "arrow-parens": [0],
