--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "nteract",
-  "version": "0.0.13",
-  "description": ":notebook: the nteract notebook",
-  "main": "index.js",
   "scripts": {
-    "postinstall": "node scripts/check-deps.js && node scripts/rebuild.js",
+    "postinstall": "node scripts/check-deps.js && install-app-deps && node scripts/rebuild.js",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=development electron .",
     "prepublish": "npm run build",
-    "clean": "rimraf build dist",
+    "clean": "rimraf ./app/build dist",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
-    "prebuild": "rimraf build",
-    "build": "babel src --out-dir build",
+    "prebuild": "rimraf ./app/build",
+    "build": "babel src --out-dir ./app/build",
     "build:icon": "./scripts/make_icons.sh && cd static/icons && iconutil -c icns nteract.iconset && mv nteract.icns ../icon.icns",
     "build:docs": "esdoc -c esdoc.json",
     "build:watch": "npm run build -- --watch",
@@ -30,78 +26,23 @@
     "test:flow": "npm run flow",
     "precoverage": "mkdirp coverage && nyc npm run test:unit",
     "coverage": "nyc report --reporter=text-lcov > coverage/lcov.info",
-    "predist": "npm run build && rimraf dist",
-    "dist": "cross-env NODE_ENV=production electron-packager . nteract --prune --out dist --ignore='example-notebooks'",
-    "dist:linux64": "npm run dist -- --platform=linux --arch=x64",
-    "dist:linux32": "npm run dist -- --platform=linux --arch=ia32",
-    "dist:osx": "npm run dist -- --platform=darwin --arch=x64 --icon ./static/icon.icns --extend-info=./static/extend.plist --app-category-type=public.app-category.developer-tools --app-bundle-id=io.nteract.nteract",
-    "dist:osx:signed": "npm run dist:osx -- --osx-sign",
-    "dist:win": "npm run dist -- --platform=win32 --icon ./static/icon.ico",
+    "pack": "build --dir",
+    "dist": "build",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "diagnostics": "scripts/kernelspecs.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nteract/nteract.git"
+  "build": {
+    "electronVersion": "1.4.3",
+    "appId": "io.nteract.nteract",
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    }
   },
-  "keywords": [
-    "jupyter",
-    "electron",
-    "notebook",
-    "nteract",
-    "data"
-  ],
-  "author": "nteract contributors",
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/nteract/nteract/issues"
-  },
-  "homepage": "https://github.com/nteract/nteract",
   "greenkeeper": {
     "ignore": [
       "commonmark",
       "redux-observable"
     ]
-  },
-  "dependencies": {
-    "ansi-to-react": "0.0.4",
-    "codemirror": "^5.19.0",
-    "commonmark": "^0.26.0",
-    "commonmark-react-renderer": "^4.3.1",
-    "commutable": "^1.1.3",
-    "electron-json-storage": "^2.0.0",
-    "electron-log": "^1.1.0",
-    "enchannel": "^1.1.3",
-    "enchannel-zmq-backend": "^2.5.0",
-    "github": "^5.0.0",
-    "immutable": "^3.7.6",
-    "jupyter-paths": "^1.0.2",
-    "kernelspecs": "^1.0.1",
-    "leaflet": "^1.0.1",
-    "mathjax-electron": "^1.1.1",
-    "moment": "^2.15.0",
-    "normalize.css": "^5.0.0",
-    "nteract-assets": "^2.1.0",
-    "plotly.js": "^1.17.3",
-    "react": "^15.3.2",
-    "react-addons-pure-render-mixin": "^15.3.2",
-    "react-codemirror": "^0.2.6",
-    "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.3.2",
-    "react-json-tree": "0.10.0",
-    "react-notification-system": "^0.2.9",
-    "react-redux": "^4.4.5",
-    "react-simple-dropdown": "^1.1.4",
-    "redux": "^3.5.2",
-    "redux-actions": "^0.12.0",
-    "redux-logger": "^2.6.1",
-    "redux-observable": "^0.12.0",
-    "rxjs": "^5.0.0-beta.12",
-    "shell-env": "^0.2.0",
-    "spawnteract": "^2.2.0",
-    "uuid": "^2.0.3",
-    "yargs": "^6.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -117,9 +58,8 @@
     "command-exists": "^1.0.2",
     "cross-env": "^3.0.0",
     "electron": "1.4.3",
+    "electron-builder": "^7.11.4",
     "electron-mocha": "^3.0.6",
-    "electron-osx-sign": "^0.3.1",
-    "electron-packager": "^8.0.0",
     "electron-react-devtools": "^0.4.0",
     "enzyme": "^2.2.0",
     "esdoc": "^0.4.8",
