--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.2",
+    "react-json-tree": "0.10.0",
     "react-notification-system": "^0.2.9",
     "react-redux": "^4.4.5",
     "react-simple-dropdown": "^1.1.4",
