--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "dist:osx": "npm run dist -- --platform=darwin --arch=x64 --icon ./static/icon.icns --extend-info=./static/extend.plist --app-category-type=public.app-category.developer-tools --app-bundle-id=io.nteract.nteract",
     "dist:osx:signed": "npm run dist:osx -- --osx-sign",
     "dist:win": "npm run dist -- --platform=win32 --icon ./static/icon.ico",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "diagnostics": "scripts/kernelspecs.js"
   },
   "repository": {
     "type": "git",
