--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "test:flow": "npm run flow",
     "precoverage": "mkdirp coverage && nyc npm run test:unit",
     "coverage": "cross-env NODE_PATH=app/node_modules/ nyc report --reporter=text-lcov > coverage/lcov.info",
-    "pack": "build --dir",
-    "dist": "build",
+    "pack": "npm install && npm run clean && npm run build && build --dir",
+    "dist": "npm install && npm run clean && npm run build && build",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "diagnostics": "scripts/kernelspecs.js"
   },
