--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "babel-preset-react": "^6.11.1",
     "chai": "^3.4.1",
     "chai-immutable": "^1.6.0",
+    "colors": "^1.1.2",
     "command-exists": "^1.0.2",
     "cross-env": "^3.0.0",
     "electron": "1.4.3",
