--- a/app/package.json
+++ b/app/package.json
@@ -54,7 +54,7 @@
     "redux-actions": "^0.12.0",
     "redux-logger": "^2.6.1",
     "redux-observable": "^0.12.0",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "^5.0.0-rc.1",
     "shell-env": "^0.2.0",
     "spawnteract": "^2.2.0",
     "uuid": "^2.0.3",
