--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "babel-cli": "^6.16.0",
     "babel-core": "^6.16.0",
     "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-preset-es2015-node6": "^0.3.0",
@@ -82,6 +83,7 @@
     "eslint-plugin-react": "^6.3.0",
     "flow-bin": "^0.33.0",
     "jsdom": "^9.4.2",
+    "json-loader": "^0.5.4",
     "jsx-chai": "^4.0.0",
     "mocha": "^3.0.2",
     "mock-require": "^1.3.0",
@@ -91,6 +93,8 @@
     "rimraf": "^2.5.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "watch": "^1.0.0"
+    "source-map-support": "^0.4.3",
+    "watch": "^1.0.0",
+    "webpack": "^1.13.2"
   }
 }
